<?xml version="1.0"?>
<package format="2">
  <name>bumpybot_teleop</name>
  <version>0.0.0</version>
  <description>The bumpybot_teleop package</description>

  <maintainer email="carlos.gonzalez@utexas.edu">Carlos Gonzalez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <rviz plugin="${prefix}/wheel_teleop_plugin.xml"/>
    <rviz plugin="${prefix}/cmd_vel_teleop_plugin.xml"/>
  </export>
</package>
